@startuml modelClassDiagram

skinparam ClassAttributeIconSize 0

class Usuario {
    - int userId
    - String userName 
    - List<Usuario> vendedoresSeguidos
    - List<Usuario> seguidores
    - List<Publicacion> publicaciones

    + seguirVendedor(Usuario vendedor)
    + dejarDeSeguirVendedor(Usuario vendedor): boolean
    + agregarSeguidor(Usuario seguidor)
    + eliminarSeguidor(Usuario seguidor): boolean
    + agregarPublicacion(Publicacion nuevaPublicacion)
    + isVendedor(): boolean
}

class Publicacion {
    - int idPost
    - LocalDate date 
    - Producto producto
    - double price
    - int category
}

class Producto {
    - int productId
    - String productName
    - String type
    - String brand
    - String color
    - String notes
}

class Promocion {
    - int idPost
    - LocalDate date 
    - Producto producto
    - double price
    - int category
    - boolean hasPromo
    - double discount
}

Publicacion o.> Producto
Usuario <-- Usuario
Usuario -> Publicacion
Publicacion <|-- Promocion


@enduml